fix tablet/small laptop layout issues

--- a/client/styles/app.styl
+++ b/client/styles/app.styl
@@ -18,7 +18,7 @@ Primary style
 
 -------------------------------- */
 html, body
-  height auto
+  height 100%
 
 html
   *
@@ -124,10 +124,9 @@ a
 main
 	width 100%
 	height 100%
-	position relative
 
 	&:after
-		content ""
+		content " "
 		display block
 		height 150px
 
@@ -181,10 +180,15 @@ main
 	&:after
 		right 0
 
+@media only screen and (min-height: 680px)
+	html
+		height auto
+	body
+		min-height 800px
+
 @media only screen and (min-width: 768px)
 	body
 		font-size 14px
-		min-height calc(768px - 85px)
 
 		h1
 			font-size 46px
@@ -196,13 +200,10 @@ main
 			font-size 15px
 
 @media only screen and (min-width: 1024px)
-	html,
-	body
-	  height calc(100% + 85px)
-
-	main
-		&:after
-			height 85px
+	html, body
+		height 100%
+		min-height 800px
+		
 
 	.banner_cta
 		font-size 15px
