--- a/client/styles/lte-ie10.styl
+++ b/client/styles/lte-ie10.styl
@@ -2,7 +2,7 @@ html[data-useragent*='MSIE 10.0'],
 html[data-useragent*='MSIE 9'],
 html[data-useragent*='MSIE 8']
 	.header_cta
-		position fixed
+		// position fixed
 		top 30px
 		
 	.results header
